--- a/css/responsive.css
+++ b/css/responsive.css
@@ -14,4 +14,9 @@
         flex-direction: column;
         align-items: center;
     }
+
+    .container .col{
+        width: 100%;
+        margin-top: 3rem;
+    }
 }
