--- a/css/responsive.css
+++ b/css/responsive.css
@@ -24,3 +24,9 @@
         background-color: #222222;
     }
 }
+
+@media screen and (min-width: 768px) {
+    .container {
+        width: 100%;
+    }
+}
